Aligned the header images and text to center

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2602,7 +2602,7 @@ input, select, textarea {
 		left: 0;
 		padding: 8em 4em;
 		position: fixed;
-		text-align: right;
+		text-align: center;
 		top: 0;
 		width: 35%;
 	}
@@ -2635,12 +2635,12 @@ input, select, textarea {
 			color: rgba(255, 255, 255, 0.5);
 			font-size: 1.35em;
 			line-height: 1.75em;
-			margin: 0;
+			margin: 1.5em 0 -1em 0;;
 		}
 
 		#header .image.avatar {
-			margin: 0 0 1em 0;
-			width: 6.25em;
+			margin: -5em 0 -1em 0;
+			width: 15.25em;
 		}
 
 /* Footer */
